trying to make a "perfect release" (as that release might NEVER get released),
but to make progress and don't delay releases too much.

Known main issues:

  * The GUI WYSIWYG editor has still some issues and limitations.
    If you can't live with those, you can simply switch it off by using:
    editor_force = True
    editor_default = 'text'  # internal default, just for completeness


Version 1.9.0beta1:

  Please note:
  * This is a BETA version, not meant for production usage, but just to
    discover bugs, incompatibilities, installation issues, documentation issues,
    etc. - please report issues on MoinMoin:MoinMoinBugs.
  * For the beta1 download archive, we updated the *.po files with the system
    text translations and also the system and help pages, so translators can
    see the current state in a working local wiki.
    We know that translations and system / help pages are not yet finished and
    that  they still require much more work.
    Please see http://master19.moinmo.in/ and help cleaning up there.

  New features:
    * HINT: MoinMoin requires Python 2.4 now. If you only have Python 2.3 and
            you don't want to upgrade it, please use MoinMoin 1.8.x.
    * HINT: MoinMoin is now a WSGI application.
      Please read the new install docs about how to use it.
      We are still working on the docs, please try to use them and report any
      bugs you find: http://master19.moinmo.in/InstallDocs
      You also have a local copy of that page as docs/INSTALL.html.
      There is also some stuff in docs/INSTALL.wsgi.
    * HINT: due to big changes in the request processing and the request
      object (related to the WSGI refactoring), many 3rd party plugins might
      need code updates to work with moin 1.9.
      We are working on some docs about how to update them to work with 1.9.
    * We use the pygments highlighting library now, use it like this:
      {{{#!highlight xxx
      ...
      }}}