@@ -31,6 +31,8 @@ Known main issues:
     editor_force = True
     editor_default = 'text'  # internal default, just for completeness
 
+Current:
+  * PackagePage action creates now packages on the fly and stores them only locally.
 
 Version 1.9.0beta1:
 
